# pyomo-summer-ws

./: README.md  THIRD_PARTY_NOTICES.md  _config.yml  _toc.yml  colab.html  genindex.html  intro.md  myst.yml  pyproject.toml  references.bib  requirements.txt  setup.md
.github/ISSUE_TEMPLATE/: broken_link.yml  content_bug.yml  solver_runtime_failure.yml  teaching_feedback.yml
.github/workflows/: tutorial.yml
_build/.doctrees/: environment.pickle  genindex.doctree  intro.doctree
_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
media/: P020220518619618731410.doc
notebooks/: python-dictionary.html  python-dictionary.ipynb  python-forloop.ipynb  python-function.ipynb  python-list.ipynb  python-pandas.ipynb
notebooks/01-python-basics/: python-exercises.ipynb
notebooks/02-pyomo-fundamentals/: Fundamentals.ipynb
notebooks/03-pyomo-nonlinear/: PyomoNonlinear.ipynb
notebooks/04-structured-modeling/: BlocksAndTransformations.ipynb
notebooks/05-dynamic-systems/: DynamicSystems.ipynb
notebooks/06-gdp/: GDP.ipynb
notebooks/07-contrib-debugging/: ContribAndDebugging.ipynb
notebooks/PyomoFundamentals/: Fundamentals.ipynb  Pyomo Fundamental.ipynb  Pyomo_Fundamental.ipynb
notebooks/PyomoNonlinear/: PyomoNonlinear.html  PyomoNonlinear.ipynb
notebooks/pyomo_summer_workshop/: CONTRIBUTING.md  LICENSE  README.md
pyomo_summer_workshop/: CONTRIBUTING.md  LICENSE  README.md
tests/: test_book_content.py  test_solver_smoke.py
tools/: check_external_links.py  check_static_site.py  write_legacy_redirects.py
(+48 files in other folders)
