[project]
name = "pyomo-summer-ws"
version = "0.1.0"
description = "Jupyter Book and notebook environment for the Pyomo Tutorial."
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
docs = [
    "ccxt>=4,<5",
    "graphviz>=0.20,<1",
    "jupyter-book==2.1.0",
    "jupyterlab>=4.4,<5",
    "openpyxl>=3.1,<4",
    "pandas>=2.0,<3",
    "pint>=0.24,<1",
    "pyomo>=6.9,<7",
]

[tool.uv]
package = false
default-groups = ["docs"]
